statum-macros/tests/ui/invalid_validators_unknown_machine.stderr
error: Error: `#[validators(DoesNotExist)]` could not resolve a matching `#[machine]` in module `invalid_validators_unknown_machine`.
       Found: `#[validators(DoesNotExist)]`
       Expected: `#[validators(TaskMachine)]`
       Fix: point `#[validators(...)]` at the Statum machine type declared in that module and declare that `#[machine]` item before this validators impl.
       Reason: Statum only resolves `#[machine]` items that have already expanded before this `#[validators]` impl.
       Note: No plain struct with that name was found in this module either.
       Candidates: No same-named `#[machine]` items were found in other modules of this file.
       Candidates: Available `#[machine]` items in this module: `TaskMachine` in `invalid_validators_unknown_machine` (line 20).
       Help: Correct shape: `#[validators(TaskMachine)] impl PersistedRow { ... }`.
  --> tests/ui/invalid_validators_unknown_machine.rs:28:1
   |
28 | #[validators(DoesNotExist)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `validators` (in Nightly builds, run with -Z macro-backtrace for more info)
